--- a/DrivoJoyWebApp/Views/Form/Form_30.cshtml
+++ b/DrivoJoyWebApp/Views/Form/Form_30.cshtml
@@ -1,2 +1,22 @@
 ﻿@model DrivoJoyWebApp.Models.RTOFormDetailsViewModel
 
+<div ng-app="RTOForms" ng-controller="BuyFormController">
+
+    <div style="padding-left:4px;padding-top:5px;"><h2>Seller Details</h2></div>
+    <div style="padding-left:2px;">
+        <input style="width:10px;height:4px;padding-top:6px;" type="text" ng-model="SellerFullName" placeholder="Seller Full Name" />
+        <input style="width:10px;height:4px;padding-top:4px;" type="text" ng-model="Seller_Son_Wife_Duaghter_Of" placeholder="Seller is son/wife/daughter of.." />
+
+        <div style="float:left; width:8px;height:4px;padding-top:4px;padding-right:2px"><input type="text" ng-model="DateOfTransfer" placeholder="Transaction Date" /></div>
+        <div style="float:right; width:8px;height:4px;padding-top:4px;"><input type="text" ng-model="RegistrationMark" placeholder="Registration Mark" /></div>
+
+        <div style="float:left; width:10px;height:4px;padding-top:4px;padding-right:2px"><input type="text" ng-model="BuyerFullName" placeholder="Your Full Name" /></div>
+        <div style="float:right; width:10px;height:4px;padding-top:4px;"><input type="text" ng-model="Buyer_Son_Wife_Duaghter_Of" placeholder="Son/Wife/Daughter of.." /></div>
+
+        <div style="float:left; width:15px;height:4px;padding-top:4px;padding-right:2px"><input type="text" ng-model="BuyerAddress" placeholder="Address" /></div>       
+    </div>
+    <div style="padding-left:7px;padding-top:5px;">
+        <input type="button" class="btn btn-primary" value="Submit Details" ng-click="submitForm()" />        <!--Yet to add 'save' feature-->
+    </div>
+    @Scripts.Render("~/bundles/bootstrap")
+</div>
