--- a/DrivoJoyWebApp/Views/Form/Index.cshtml
+++ b/DrivoJoyWebApp/Views/Form/Index.cshtml
@@ -1,52 +1,76 @@
 ﻿@model DrivoJoyWebApp.Models.RTOFormDetailsViewModel
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Forms";
 }
 
-<h2>Index</h2>
-
-@{
-    ViewBag.Title = "Index";
-}
-
-<div ng-app="RTOForms" ng-controller="LandingPageController" style="width:100%;height:600px">
-
-    <div ng-view style="float:left;width:75%;"> </div>
-
-    <div style="float:right;width:25%;padding-left:30px;padding-top:20px">
-        <div class="container" style="width:40px;height:80px;border-color:gray">
-
-            <div style="padding-left:4px;padding-top:3px;">
-                <h3>Are you a Seller or Buyer</h3>
-                <br />
-                <select class="form-control select" ng-model="FormSelected"  data-ng-options="x for x in Choice "></select>
-            </div>
 
 
-            <div style="padding-top:3px;">
-                <h3 style="align-content:center">Buyer and Seller RTO</h3>
-                <br />
 
-                <div style="float:left;width:50%;" class="form-control select">
-                    <select ng-model="SellerRTO" data-ng-options="x for x in SellRTOList "></select>
-                </div>
-                <div style="float:right;width:50%;" class="form-control select">
-                    <select ng-model="BuyerRTO" data-ng-options="x for x in BuyRTOList "></select>
-                </div>
-
-            </div>
-
-            
-            <div style="align-content:center"><input type="button" class="btn btn-primary" value="Go To Form"
-       ng-click="submitForm()" /></div>  
-           
-            
-            
-            
-
-        </div>
-    </div>
+<div style="padding-top:20px">
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    @Scripts.Render("~/bundles/RTOForms")
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="jquery.dropdown.js"></script>
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    <script src="~/Scripts/bootstrap.min.js"></script>
     @Scripts.Render("~/bundles/bootstrap")
-</div>
+    
+   
+    @Styles.Render("~/Content/css")
+   
+   
 
+
+    <div ng-app="RTOForms" ng-controller="LandingPageController" style="width:100%;height:600px">
+
+
+
+        <div style="padding-left:30px;padding-top:20px">
+            <div class="container">
+
+                <div style="padding-left:4px;padding-top:3px;">
+                    <h3>Are you a Seller or Buyer</h3>
+                    <br />
+                    <select class="form-control select" ng-model="FormSelected">
+                        <option value="Seller">Seller</option>
+                        <option value="Buyer">Buyer</option>
+                    </select>
+                </div>
+
+
+                <div style="padding-top:3px;">
+                    <h3 style="align-content:center">Buyer and Seller RTO</h3>
+                    <br />
+
+                    <div style="float:left;width:50%;">
+                        <select class="form-control select" ng-model="SellerRTO">
+                            <option value="WakeField">WakeField</option>
+                            <option value="KRPuram">KRPuram</option>
+                            <option value="Domlur">Domlur</option>
+                            <option value="WhiteField">WhiteField</option>
+                        </select>
+                    </div>
+                    <div style="float:right;width:50%;">
+                        <select class="form-control select" ng-model="BuyerRTO">
+                            <option value="WakeField">WakeField</option>
+                            <option value="KRPuram">KRPuram</option>
+                            <option value="Domlur">Domlur</option>
+                            <option value="WhiteField">WhiteField</option>
+                        </select>
+                    </div>
+
+                </div>
+
+
+                <div style="align-content:center"><input type="button" class="btn btn-primary" value="Proceed" ng-click="submitForm()" /></div>
+                <div ng-view> </div>
+            </div>
+        </div>
+
+
+
+    </div>
+
+</div>
