--- a/DrivoJoyWebApp/Views/Form/Form_30.cshtml
+++ b/DrivoJoyWebApp/Views/Form/Form_30.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrivoJoyWebApp.Models.RTOFormDetailsViewModel
+﻿@model DrivoJoyWebApp.Models.LandingPageViewModel
 
 <div ng-app="RTOForms" ng-controller="BuyFormController">
 
