--- a/DrivoJoyWebApp/Views/Form/Index.cshtml
+++ b/DrivoJoyWebApp/Views/Form/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DrivoJoyWebApp.Models.RTOFormDetailsViewModel
+﻿@model DrivoJoyWebApp.Models.LandingPageViewModel
 
 @{
     ViewBag.Title = "Forms";
